[gd_scene load_steps=3 format=3 uid="uid://dgnkftcsg3jf0"]

[ext_resource type="Script" uid="uid://cq2awkht35dc2" path="res://component/player_name_label/player_name_editor.gd" id="1_ebsjr"]
[ext_resource type="FontFile" uid="uid://cclxpsefqax4e" path="res://font/Silkscreen-Regular.ttf" id="2_vewl6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
script = ExtResource("1_ebsjr")

[node name="NameInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = -413.0
offset_top = 21.0
offset_right = -213.0
offset_bottom = 52.0
theme_override_fonts/font = ExtResource("2_vewl6")

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = -173.0
offset_top = 21.0
offset_right = -93.0
offset_bottom = 52.0
theme_override_fonts/font = ExtResource("2_vewl6")
text = "change"

[node name="NameStatus" type="Label" parent="."]
layout_mode = 0
offset_left = -413.0
offset_top = 61.0
offset_right = -5.0
offset_bottom = 84.0
theme_override_fonts/font = ExtResource("2_vewl6")
